# ChangeLog for app-mobilephone/sobexsrv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/sobexsrv/ChangeLog,v 1.3 2006/04/16 04:14:04 joker Exp $

  16 Apr 2006; Christian Birchinger <joker@gentoo.org>
  sobexsrv-1.0.0_pre4.ebuild:
  Added sparc stable keyword

*sobexsrv-1.0.0_pre4 (21 Mar 2006)

  21 Mar 2006; Christian Birchinger <joker@gentoo.org>
  +files/conf.d_sobexsrv, +files/init.d_sobexsrv, +metadata.xml,
  +sobexsrv-1.0.0_pre4.ebuild:
  Initial import
